<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SettingsStyle"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/ui_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_mode"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/ui_switch"
        android:text="@string/day"
        android:textColor="?android:attr/textColorPrimary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ui_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_toStartOf="@id/night_text"
        android:thumb="@drawable/switch_background" />

    <TextView
        android:id="@+id/night_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="night"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/numerals_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ui_switch"
        android:text="@string/numerals"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/arabic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ui_switch"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/ui_switch"
        android:text="123"
        android:textColor="?android:attr/textColorPrimary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/numerals_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ui_switch"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@id/arabic_text"
        android:thumb="@drawable/switch_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ui_switch"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/numerals_switch"
        android:text="٣٢١"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/user_color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numerals_switch"
        android:text="@string/user_color"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/user_color_turquoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numerals_switch"
        android:layout_marginTop="35dp"
        android:layout_toStartOf="@id/numerals_switch"
        android:src="@drawable/user_color_turquoise" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/user_color_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numerals_switch"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/user_color_turquoise"
        android:thumb="@drawable/switch_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numerals_switch"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/user_color_switch"
        android:src="@drawable/user_color_purple" />

    <TextView
        android:id="@+id/operation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_color_switch"
        android:text="@string/operation"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/operation_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_color_switch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/spinner_nm_bg"
        android:backgroundTint="#c5c4c4"
        android:entries="@array/operations"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/operation_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_spinner"
        android:text="@string/operation_level"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/operation_level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/spinner_nm_bg"
        android:backgroundTint="#c5c4c4" />

    <TextView
        android:id="@+id/speed_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_level_spinner"
        android:text="@string/speed_level"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/speed_level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_level_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/spinner_nm_bg"
        android:backgroundTint="#c5c4c4"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/reference_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_spinner"
        android:text="@string/reference_speed"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/reference_speed"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        android:text="6"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/speed_level_coef_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reference_speed"
        android:text="@string/speed_level_coef"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/speed_level_2_coef"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/level_2_text"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="1.1"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/level_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_alignParentStart="true"
        android:text="2"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/level_3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_toEndOf="@id/speed_level_2_coef"
        android:text="3"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/speed_level_3_coef"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/level_3_text"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="1.2"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/level_4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_toEndOf="@id/speed_level_3_coef"
        android:text="4"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/speed_level_4_coef"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/level_4_text"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="1.3"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/level_5_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_toEndOf="@id/speed_level_4_coef"
        android:text="5"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/speed_level_5_coef"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_coef_text"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/level_5_text"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="1.3"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/user_constant_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_5_coef"
        android:text="@string/user_constant_speed"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/user_constant_speed"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_level_5_coef"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="0.7"
        android:textColor="@color/text_color" />


    <TextView
        android:id="@+id/pulse_amplitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_constant_speed"
        android:text="@string/pulse_amplitude"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/pulse_amplitude"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_constant_speed"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:text="1.7"
        android:textColor="@color/text_color" />

</RelativeLayout>